# sparkfun-pico

./: .gitmodules  README.md
examples/all_allocator/: CMakeLists.txt  test_allocator.c  test_cpp.cpp  test_cpp.h
examples/has_psram/: has_psram.c
examples/set_qflash/: README.md
examples/test_allocator/: CMakeLists.txt
rp2350/set_qflash/: set_qflash.c
rp2350/sfe_pico/: CMakeLists.txt  sfe_pico_alloc.c  sfe_psram.c
rp2350/sfe_pico_alloc/: sfe_pico_alloc.c  sfe_pico_alloc.h
rp2350/src/: sfe_psram.h
sparkfun_pico/: CMakeLists.txt  sfe_pico_alloc.c  sfe_psram.c  sfe_psram.h
